--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .header {
-  background-color: #2c7ef4;  
+  background-color: #6E90AF;  
   height: 70px;
   position: fixed;
   width: 100%;
@@ -72,4 +72,10 @@ img {
   font-size: 10px;
   margin-left: 20px;
   line-height: 50px;
+}
+
+.pagina-home{
+  
+
+
 }
