--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 body {
   font-family: 'Comfortaa', cursive;
   padding: 90px 20px 0;
+  background-image: url("https://i.imgur.com/6fNADTA.png");
 }
 
 .header {
@@ -59,7 +60,6 @@ img {
   height: 7%;
   display: flex;
   justify-content: space-between;
-  
 }
 
 .texto-footer{
@@ -74,8 +74,190 @@ img {
   line-height: 50px;
 }
 
-.pagina-home{
-  
+#pagina-inicio{
+  background-size: cover; 
+  background-position: center;
+  align-items: center;
+  overflow: hidden;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-left: 20%;
+  padding-right: 20%;
+}
 
+
+.fotos{
+  width: 356px;
+  height: 300px;
+  float: center;
+  margin : 5px;
+  border-radius: 25px;
+  padding-top: 2px;
+  margin-top: 1px;
+}
+
+#texto-principal{
+  background-position: center;
+  background-image: url(https://i.imgur.com/KJIZ73h.png);
+  text-align: center;
+  font-family: 'Comfortaa', cursive;
+  border: 1px  black;
+  border-radius: 25px; 
+  overflow: hidden;
+
+  width: 1100px;
+  height: 120px;
+  left: 0;
+  right: 0;
+  
+  
+}
+#bienvenida{
+  padding-top: 10px;
+}
+
+
+#pagina-comprobacion, #pagina-valida, #pagina-no-valida{
+  background-image: url(https://i.imgur.com/xm8hHlu.png);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  border-radius: 12px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-bottom: 10%;
+  padding-top: 2%;
+  
+}
+
+#tarjetas{
+  display: block;
+  margin: 0 auto;
+  width: 400px;
+  height: 400px;
+  float: none;
+  border-radius: 12px;
+}
+
+.naranja{
+  background-color: #FFC466;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-align: center;
+  margin-left: 12%;
+  margin-top: 5%;
+  
+  align-items: center;
+  justify-content: center;
+  
+  border: 1px  black;
+  border-radius: 12px; 
+  overflow: hidden;
+  padding: 16px 16px;
+  width: 75%;
 
 }
+
+.confirmacion{
+  display: grid;
+  place-items: center;
+  grid-row-gap: 20px;
+}
+#numero-input{
+  display:grid;
+  grid-template-columns: 300px 300px;
+  grid-column-gap: 5px;
+}
+
+#ingrese-tarjeta{
+  font-family: 'Comfortaa', cursive;
+  color: #307BE8;
+  padding-bottom: 2%;
+}
+
+#numero{
+  grid-column: 1;
+  align-items: center;
+  text-align: center;
+  float: inline-start;
+  padding-left: 200px;
+}
+
+#pass{
+  grid-column: 2;
+  box-sizing: border-box;
+  padding-right: 150px;
+}
+
+.img-final{
+  grid-row:2;
+  width: 500px; 
+  height: 400px;
+  border: #307BE8 5px;
+  border-radius: 15px;
+}
+.row-1{
+  grid-row: 1;
+  color: #307BE8;
+}
+.row-3{
+  grid-row: 3;
+  color: white;
+}
+
+#boton-seguir, #boton-volver{
+  grid-row: 4;
+  width: 250px;
+  height: 40px;
+  font-size: 20px;
+}
+
+#boton-validar{
+  width: 150px;
+  height: 40px;
+  font-size: 20px;
+}
+
+#boton-validar, #boton-volver, #boton-seguir{
+  display:inline-block;
+  padding:0.3em 1.2em;
+  margin:0 0.1em 0.1em 0;
+  border:0.16em solid rgba(255,255,255,0);
+  border-radius: 10px;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-weight:300;
+  color: white;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align:center;
+  transition: all 0.2s;
+  background-color: #B1D362;
+}
+
+.boton{
+  display:inline-block;
+  padding:0.3em 1.2em;
+  margin:0 0.1em 0.1em 0;
+  border:0.16em solid rgba(255,255,255,0);
+  border-radius: 10px;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-weight:300;
+  color:#307BE8;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align:center;
+  transition: all 0.2s;
+  background-color: #FFC466;
+}
+
+.boton:hover{
+  box-shadow: 0 0 0 2pt #f2e2c1;
+  /* box-shadow: 0 0 0 2pt #FFD101; */
+  color: #316fe4;
+} 
