--- a/src/style.css
+++ b/src/style.css
@@ -1,94 +1,303 @@
 * {
-    margin: 0;
-    box-sizing: border-box;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: 'Comfortaa', cursive;
-  padding: 90px 20px 0;
-  background-image: url("https://i.imgur.com/6fNADTA.png");
+font-family: 'Comfortaa', cursive;
+padding: 90px 20px 0;
+background-image: url(https://i.imgur.com/6fNADTA.png);
+background-repeat: no-repeat;
+background-size: cover;
+
 }
 
 .header {
-  background-color: #6E90AF;  
-  height: 70px;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
+background-color: #6E90AF;  
+height: 70px;
+position: fixed;
+width: 100%;
+top: 0;
+left: 0;
 }
 
 .nav {
-  display: flex;
-  justify-content: space-between;  
+display: flex;
+justify-content: space-between;  
 }
 
 .nav-link {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 img {
-    width: 190px;
-    height: 80 px;
-    float: left;
-    padding: 8px;
-    line-height: 80px;
-    margin-left: 20px;
+  width: 190px;
+  height: 80 px;
+  float: left;
+  padding: 8px;
+  line-height: 80px;
+  margin-left: 20px;
 }
 
 .nav-menu {
-    display: flex;
-    margin-right: 40px;
-    list-style: none;
+  display: flex;
+  margin-right: 40px;
+  list-style: none;
 }
 
 .nav-menu-item{
-    font-size: 18 px;
-    margin: 0 30px;
-    line-height: 80px;
-    width: max-content;
+  font-size: 18 px;
+  margin: 0 30px;
+  line-height: 80px;
+  width: max-content;
 }
 
 .pie-pagina{
-  background-color: #B1D362;
-  position: fixed;  
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100;
-  height: 7%;
-  display: flex;
-  justify-content: space-between;
+background-color: #B1D362;
+position: fixed;  
+left: 0;
+right: 0;
+bottom: 0;
+width: 100;
+height: 7%;
+display: flex;
+justify-content: space-between;
 }
 
 .texto-footer{
-  color: white;
-  text-align: left;
-  padding-left: 0%;
-  margin-left: 0%;
-  padding-top: 0%;
-  margin-top: 0%;
-  font-size: 10px;
-  margin-left: 20px;
-  line-height: 50px;
+color: white;
+text-align: left;
+padding-left: 0%;
+margin-left: 0%;
+padding-top: 0%;
+margin-top: 0%;
+font-size: 10px;
+margin-left: 20px;
+line-height: 50px;
 }
 
 #pagina-inicio{
-  background-size: cover; 
-  background-position: center;
-  align-items: center;
-  overflow: hidden;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding-left: 20%;
-  padding-right: 20%;
+background-size: cover; 
+background-position: center;
+align-items: center;
+overflow: hidden;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+padding-left: 20%;
+padding-right: 20%;
 }
 
 
 .fotos{
+width: 356px;
+height: 300px;
+float: center;
+margin : 5px;
+border-radius: 25px;
+padding-top: 2px;
+margin-top: 1px;
+}
+
+#texto-principal{
+background-position: center;
+background-image: url(https://i.imgur.com/KJIZ73h.png);
+text-align: center;
+font-family: 'Comfortaa', cursive;
+border: 1px  black;
+border-radius: 25px; 
+overflow: hidden;
+
+width: 1100px;
+height: 120px;
+left: 0;
+right: 0;
+
+
+}
+#bienvenida{
+padding-top: 10px;
+}
+/*TÍTULO PAGINA PRODUCTOS*/
+#cuatro-productos{
+text-align: center;
+margin-top: 20px;
+font-size: 40px;
+color: #B1D362;
+}
+/******************************/
+
+#pagina-comprobacion, #pagina-valida, #pagina-no-valida{
+background-image: url(https://i.imgur.com/xm8hHlu.png);
+display: flex;
+align-items: center;
+justify-content: center;
+overflow: hidden;
+border-radius: 12px;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+padding-left: 20%;
+padding-right: 20%;
+padding-bottom: 10%;
+padding-top: 2%;
+
+}
+
+#tarjetas{
+display: block;
+margin: 0 auto;
+width: 400px;
+height: 400px;
+float: none;
+border-radius: 12px;
+}
+
+.naranja{
+background-color: #FFC466;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+text-align: center;
+margin-left: 12%;
+margin-top: 5%;
+
+align-items: center;
+justify-content: center;
+
+border: 1px  black;
+border-radius: 12px; 
+overflow: hidden;
+padding: 16px 16px;
+width: 75%;
+
+}
+
+.confirmacion{
+display: grid;
+place-items: center;
+grid-row-gap: 20px;
+}
+#numero-input{
+display:grid;
+grid-template-columns: 300px 300px;
+grid-column-gap: 5px;
+}
+
+#ingrese-tarjeta{
+font-family: 'Comfortaa', cursive;
+color: #307BE8;
+padding-bottom: 2%;
+}
+
+#numero{
+grid-column: 1;
+align-items: center;
+text-align: center;
+float: inline-start;
+padding-left: 200px;
+}
+
+#pass{
+grid-column: 2;
+box-sizing: border-box;
+padding-right: 150px;
+}
+
+.img-final{
+grid-row:2;
+width: 500px; 
+height: 400px;
+border: #307BE8 5px;
+border-radius: 15px;
+}
+.row-1{
+grid-row: 1;
+color: #307BE8;
+}
+.row-3{
+grid-row: 3;
+color: white;
+}
+
+#boton-seguir, #boton-volver{
+grid-row: 4;
+width: 250px;
+height: 40px;
+font-size: 20px;
+}
+
+#boton-validar{
+width: 150px;
+height: 40px;
+font-size: 20px;
+}
+
+#boton-validar, #boton-volver, #boton-seguir{
+display:inline-block;
+padding:0.3em 1.2em;
+margin:0 0.1em 0.1em 0;
+border:0.16em solid rgba(255,255,255,0);
+border-radius: 10px;
+box-sizing: border-box;
+text-decoration:none;
+font-weight:300;
+color: white;
+text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+text-align:center;
+transition: all 0.2s;
+background-color: #B1D362;
+} 
+
+/*botones SEGUNDA PAG*/
+#boton-falso1{
+  margin-left: 260px;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+#boton-falso2{
+  margin-left: 180px;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+#boton-falso3{
+  margin-left: 180px;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+#boton-detalles{
+  margin-left: 170px;
+  justify-content: space-between;
+  cursor: pointer;
+}
+/******************************/
+.boton{
+display:inline-block;
+padding:0.3em 1.2em;
+margin:0 0.1em 0.1em 0;
+border:0.16em solid rgba(255,255,255,0);
+border-radius: 10px;
+box-sizing: border-box;
+text-decoration:none;
+font-weight:300;
+color:#307BE8;
+text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+text-align:center;
+transition: all 0.2s;
+background-color: #FFC466;
+}
+
+.boton:hover{
+box-shadow: 0 0 0 2pt #f2e2c1;
+/* box-shadow: 0 0 0 2pt #FFD101; */
+color: #316fe4;
+} 
+
+.fotos2{
   width: 356px;
   height: 300px;
   float: center;
@@ -96,168 +305,117 @@ img {
   border-radius: 25px;
   padding-top: 2px;
   margin-top: 1px;
+  }
+
+  .container{
+    width: 90%;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 80px;
+    margin-bottom: 2em;
+    display: grid;
+    grid-template-columns: repeat(4,0fr);
+    grid-gap: 60px;
 }
 
-#texto-principal{
-  background-position: center;
-  background-image: url(https://i.imgur.com/KJIZ73h.png);
-  text-align: center;
-  font-family: 'Comfortaa', cursive;
-  border: 1px  black;
-  border-radius: 25px; 
-  overflow: hidden;
-
-  width: 1100px;
-  height: 120px;
-  left: 0;
-  right: 0;
-  
-  
-}
-#bienvenida{
-  padding-top: 10px;
+.Imagen{
+    background-color: white;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,.095);
+    border-radius: 10px;
 }
 
-
-#pagina-comprobacion, #pagina-valida, #pagina-no-valida{
-  background-image: url(https://i.imgur.com/xm8hHlu.png);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  border-radius: 12px;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding-left: 20%;
-  padding-right: 20%;
-  padding-bottom: 10%;
-  padding-top: 2%;
-  
+.Texto{
+    padding: 2em;
+    padding-top: 3px;
+    cursor: pointer;
+    text-align: left;
+    font-size: 10px;
+    color: #307BE8;
+    font-family: 'Comfortaa', cursive;
 }
 
-#tarjetas{
-  display: block;
-  margin: 0 auto;
-  width: 400px;
-  height: 400px;
-  float: none;
-  border-radius: 12px;
+.imagenes{
+    max-width: 250px;
+    display: block;
 }
 
-.naranja{
-  background-color: #FFC466;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  text-align: center;
-  margin-left: 12%;
-  margin-top: 5%;
-  
-  align-items: center;
-  justify-content: center;
-  
-  border: 1px  black;
-  border-radius: 12px; 
-  overflow: hidden;
-  padding: 16px 16px;
-  width: 75%;
+@media screen and (min-width: 590px) {
 
+    .container{
+        grid-auto-columns: repeat (4,1fr);
+    }
 }
 
-.confirmacion{
+@media screen and (min-width: 960px) {
+
+    .container{
+        grid-auto-columns: repeat (4,1fr);
+    }
+}
+.producto-collar{
+  width: 500px;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 80px;
+  margin-bottom: 8em;
   display: grid;
-  place-items: center;
-  grid-row-gap: 20px;
+  grid-template-columns: repeat(2,0fr);
+  grid-gap: 60px;
 }
-#numero-input{
-  display:grid;
-  grid-template-columns: 300px 300px;
-  grid-column-gap: 5px;
+/*.ima-collar{
+  max-width: 50px;
+  display: flex;  
+  box-sizing: 1000px;
+}*/
+
+.imagen-collar{
+  padding: 200px 300px;
+  background-color: white;
+  box-shadow: 0 0 5px 0 rgba(0,0,0,.095);
+  border-radius: 10px;
 }
 
-#ingrese-tarjeta{
+.texto-collar{
+  padding-top: 3px;
+  cursor: pointer;
+  text-align: left;
+  font-size: 20px;
+  color: #307BE8;
   font-family: 'Comfortaa', cursive;
-  color: #307BE8;
-  padding-bottom: 2%;
+}
+/*PRUEBA*/
+.container-collar {
+  width: 90%;
+  max-width: 1000px;
+  margin:auto;
+  padding: 60px;
+  margin-top: 30px;
+  
 }
 
-#numero{
-  grid-column: 1;
-  align-items: center;
-  text-align: center;
-  float: inline-start;
-  padding-left: 200px;
+.container-collar img {
+  width: 500px;
+  float: left;
+  margin-right: 50px;
 }
 
-#pass{
-  grid-column: 2;
-  box-sizing: border-box;
-  padding-right: 150px;
+.imagen-collar-compra {
+  box-shadow: 0 0 5px 0 rgba(0,0,0,.095);
+  background-color: white;
+  border-radius: 10px;
 }
 
-.img-final{
-  grid-row:2;
-  width: 500px; 
-  height: 400px;
-  border: #307BE8 5px;
-  border-radius: 15px;
-}
-.row-1{
-  grid-row: 1;
-  color: #307BE8;
-}
-.row-3{
-  grid-row: 3;
-  color: white;
+#boton-compra {
+  margin-top: 30px;
+  
 }
 
-#boton-seguir, #boton-volver{
-  grid-row: 4;
-  width: 250px;
-  height: 40px;
+.precio-collar{
+  margin-top: 50px;
   font-size: 20px;
 }
-
-#boton-validar{
-  width: 150px;
-  height: 40px;
-  font-size: 20px;
+.precio-numeros {
+  font-size: 30px;
 }
-
-#boton-validar, #boton-volver, #boton-seguir{
-  display:inline-block;
-  padding:0.3em 1.2em;
-  margin:0 0.1em 0.1em 0;
-  border:0.16em solid rgba(255,255,255,0);
-  border-radius: 10px;
-  box-sizing: border-box;
-  text-decoration:none;
-  font-weight:300;
-  color: white;
-  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
-  text-align:center;
-  transition: all 0.2s;
-  background-color: #B1D362;
-}
-
-.boton{
-  display:inline-block;
-  padding:0.3em 1.2em;
-  margin:0 0.1em 0.1em 0;
-  border:0.16em solid rgba(255,255,255,0);
-  border-radius: 10px;
-  box-sizing: border-box;
-  text-decoration:none;
-  font-weight:300;
-  color:#307BE8;
-  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
-  text-align:center;
-  transition: all 0.2s;
-  background-color: #FFC466;
-}
-
-.boton:hover{
-  box-shadow: 0 0 0 2pt #f2e2c1;
-  /* box-shadow: 0 0 0 2pt #FFD101; */
-  color: #316fe4;
-} 
